--- a/src/client/app/styles/variables.module.scss
+++ b/src/client/app/styles/variables.module.scss
@@ -1,2 +1,6 @@
 $colour-primary: #4444;
 $colour-secondary: #1525;
+$primary: #229fa9;
+$diamond-light-blue: #00bfff;
+$black: #19253d;
+$red: #e63946;
