--- a/src/client/app/pages/transaction/transactionPage.scss
+++ b/src/client/app/pages/transaction/transactionPage.scss
@@ -1,7 +1,7 @@
-.transaction_page {
+// .transaction_page {
 
     
-}
+// }
 .add_transaction_button {
     display: flex;
     text-align: center;
