--- a/src/client/app/Components/Header/header.module.scss
+++ b/src/client/app/Components/Header/header.module.scss
@@ -18,7 +18,11 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        color: yellow;
+        justify-content: space-around;
+        color: $diamond-light-blue;
+        // background: red;
+        width: 400px;
+
         
     }
 }
