Working On Debtors

--- a/src/client/app/pages/debtor/debtor.scss
+++ b/src/client/app/pages/debtor/debtor.scss
@@ -1,4 +1,23 @@
 .debtor{
+    .add_transaction_button {
+        display: flex;
+        text-align: center;
+        min-width: 120px;
+        color: $diamond-light-blue;
+        font-size: 19px;
+        letter-spacing: 2px;
+        border: 1px $diamond-light-blue solid;
+        border-radius: 4px;
+        padding: 5px 10px;
+
+        &:hover {
+            border: 1px $black solid;
+            background: $black;
+            color: $diamond-light-blue;
+        }
+
+   
+    }
     #Table-Container {
         margin: 20px;
 
