Working on the category page

--- a/src/client/app/pages/category/page.scss
+++ b/src/client/app/pages/category/page.scss
@@ -17,9 +17,10 @@
     }
 
     .category-body-section {
-        padding: 0 30px;
+        padding: 0 25px;
         width: 100%;
         min-height: 200px;
+        height: 500px;
         background: blue;
         display: flex;
 
