--- a/src/client/app/pages/category/page.scss
+++ b/src/client/app/pages/category/page.scss
@@ -23,7 +23,7 @@
         min-height: 200px;
         height: auto;
         overflow: auto;
-        background: blue;
+        // background: blue;
         display: flex;
         justify-content: center;
     }
