--- a/src/client/app/Components/Header/header.module.scss
+++ b/src/client/app/Components/Header/header.module.scss
@@ -8,7 +8,7 @@
     align-items: center;
     justify-content: space-between;
 
-    h1 {
+    .title {
         letter-spacing: 2px;
         font-size: 37.5px;
         color: $diamond-light-blue;
