--- a/src/client/app/pages/category/CategoryModalTable/CategoryModalTable.scss
+++ b/src/client/app/pages/category/CategoryModalTable/CategoryModalTable.scss
@@ -6,6 +6,7 @@
     border-collapse: collapse;
     font-size: 0.9em;
     min-width: 400px;
+    height: 100vh;
     width: 100%;
     border-radius: 5px 5px 0 0; //Y Top left and top right to be rounded
     overflow: auto;
