--- a/src/client/app/pages/category/CategoryTable.scss
+++ b/src/client/app/pages/category/CategoryTable.scss
@@ -1,3 +1,6 @@
+.content-table-wrapper {
+    height: 75vh;
+}
 .content-table {
     border-collapse: collapse; // Reduces amount of sapce between cells
     font-size: 0.9em;
@@ -5,12 +8,13 @@
     margin: 0 20px;
     min-width: 800px;
     border-radius: 5px 5px 0 0;
-    // overflow: hidden; //Y Need to add this for the border-radius to be applied
+    overflow: auto; //Y Need to add this for the border-radius to be applied
     box-shadow: 0 0 20px rgba(0,0,0,0.15);
 }
 
 th {
     position: sticky;
+    background-color: $black;
     top: 0;
 }
 
