--- a/src/client/app/pages/budget/table/table.scss
+++ b/src/client/app/pages/budget/table/table.scss
@@ -5,37 +5,52 @@
 
 }
 
-table {
+#budget-table {
     border: 1px solid black;
     border-collapse: separate;
     border-spacing: 0px;
     width: 100%;
     min-width: max-content;
+
+    th {
+        position: sticky;
+        top: 0;
+        background-color: $black;
+        color: $diamond-light-blue;
+
+    }
+    
+    .bottom-header {
+        position: sticky;
+        top: 40px;
+        background-color: $black;
+        color: $diamond-light-blue;
+        border: solid 1px black;
+    
+    }
+
+    th, td {
+        border: 1px solid black;
+        padding: 10px;
+    }
+
+    thead tr {
+        background: black;
+
+    }
+
+    .green-cell {
+        background-color: #50C878;
+
+    }
+    .red-cell {
+        background-color: #D70040;
+    }
 }
 
-th {
-    position: sticky;
-    top: 0;
-    background-color: $black;
-    color: $diamond-light-blue;
-
-}
-
-.bottom-header {
-    position: sticky;
-    top: 40px;
-    background-color: $black;
-    color: $diamond-light-blue;
-    border: solid 1px black;
-
-}
-
-// .credit-header {
-//     background-color: rgb(0, 166, 62);
-// }
 
 .table-wrapper {
-    max-height: 550px; // <------- Height og the table
+    max-height: 550px; // <------- Height of the table
     overflow-y: scroll;
     margin: 20px;
 
@@ -45,15 +60,7 @@ th {
     }
 }
 
-th, td {
-    border: 1px solid black;
-    padding: 10px;
-}
 
-thead tr {
-    background: black;
-
-}
 
 .outer-wrapper {
     border: 1px solid black;
