--- a/src/client/app/pages/budget/BudgetTable/BudgetTable.scss
+++ b/src/client/app/pages/budget/BudgetTable/BudgetTable.scss
@@ -4,6 +4,8 @@
 	padding: 5px;
 }
 
+//!   !!!!!!!!!!!   OLD ONE   !!!!!!!!!!!
+
 #Budget-Table {
     border-collapse: collapse;
     width: full;
@@ -136,7 +138,7 @@
 		border-right: 2px solid #000;
 	}
 
-	.balance-row{
+	.balance-row {
 		border-top: 2px solid #000;
 		border-bottom: 2px solid #000;
 	}
