--- a/src/client/app/pages/budget/table.scss
+++ b/src/client/app/pages/budget/table.scss
@@ -41,6 +41,11 @@
 
     }
 
+    td {
+        font-size: 0.9em;
+        cursor: pointer;
+    }
+
     .green-cell {
         background-color: #50C878;
 
