--- a/src/client/app/Sidebar/SideBar.scss
+++ b/src/client/app/Sidebar/SideBar.scss
@@ -50,7 +50,7 @@ body {
     border-radius: .5em;
     padding: .85em;
     text-decoration: none;
-    color: $accent;
+    color: $secondary;
     display: flex;
     align-items: center;
     gap: 1em; // Distance between icons and text
@@ -76,7 +76,8 @@ body {
 }
 
 #sidebar a:hover, #sidebar .dropdown-btn:hover {
-    background-color: var(--hover-clr);
+    background-color:$secondary;
+    color: $accent;
 }
 
 #sidebar .sub-menu {
