--- a/src/client/app/pages/transaction/transactionPage.scss
+++ b/src/client/app/pages/transaction/transactionPage.scss
@@ -19,6 +19,14 @@
             display: flex;
             flex-direction: row;
             gap: 0.5rem;
+            z-index:20;
+
+            .category, .supplier {
+                min-width: 175px;
+                max-width: auto;
+            }
+
+
         }
 
         .button-wrapper {
@@ -107,6 +115,33 @@
 
             tbody tr:last-of-type {
                 border-bottom: 2px solid $accent;
+            }
+
+            .pill {
+                text-align: center;
+
+               p { 
+                    text-align: center;
+                    border-radius: 16px;
+                    padding: 3px 10px;
+
+                }
+            }
+
+            .credit-pill {
+                p {
+                    background-color: #C8E6C9; 
+                    color: #006400; 
+                }
+
+            }
+
+            .debit-pill {
+                p {
+                    background-color: #FFCDD2; 
+                    color: #8B0000; 
+                }
+
             }
         }
     }
